<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="12dp"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/logo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:id="@+id/txt_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:padding="10dp"
        android:id="@+id/txt_password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_marginTop="15dp"
        android:text="@string/log_in"
        android:padding="10dp"
        android:id="@+id/bt_login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_not_have_account"
        android:layout_marginTop="15dp"
        android:id="@+id/text_do_not_have_account"/>
</LinearLayout>